--- a/Spring_Boot-02-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/Spring_Boot-02-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -19,5 +19,8 @@
 
     <p th:text="${ 'Hello ' + birthday}"></p>
 
+    <h2 th:text="${student.getFirstName()}"></h2>
+    <h2 th:text="${student.firstName}"></h2>
+
 </body>
 </html>
