--- a/Spring_Boot-03-MVC-Form/src/main/resources/templates/mentor/mentor-register.html
+++ b/Spring_Boot-03-MVC-Form/src/main/resources/templates/mentor/mentor-register.html
@@ -5,6 +5,40 @@
     <title>Mentor</title>
 </head>
 <body>
- hi
+
+    <div align="center">
+
+        <form action="/mentor/confirm" method="post" th:object="${mentor}">
+
+            <label>First Name</label>
+            <input type="text" id="firstName" th:field="*{firstName}"><br>
+
+            <label>Last Name</label>
+            <input type="text" id="lastName" th:field="*{lastName}"><br>
+
+            <label>E mail</label>
+            <input type="email" id="email" th:field="*{email}"><br>
+
+            <label>Graduated:</label>
+            <input type="checkbox" th:field="*{graduated}"><br>
+
+            <label>Gender:</label>
+            <input type="radio" value="Male" th:field="*{gender}">Male
+            <input type="radio" value="Female" th:field="*{gender}">Female<br>
+
+            <label>Batch Number:</label>
+            <select th:field="*{batch}">
+                <option th:each="theBatch : ${batchList}" th:value="${theBatch}" th:text="${theBatch}" ></option>
+            </select><br>
+
+            <label>Company:</label>
+            <textarea th:field="*{company}"></textarea><br>
+
+            <button type="submit">Register</button>
+
+        </form>
+
+    </div>
+
 </body>
 </html>
